crates/zoid-tui/tests/snapshots/chat_snapshot__compacted_tool_result_detail_140.snap
---
source: crates/zoid-tui/tests/chat_snapshot.rs
expression: "draw_zoom(&compacted_msgs(), Zoom::Detail, 140)"
---
"00:00 › grep the repo for TODOs                                                                                                             "
"00:00 zoid searching                                                                                                                        "
"  ● search(query: TODO) ⏎ peek                                                                                                              "
"  ✓ search ⊟                                                                                                                                "
"row 0                                                                                                                                       "
"… (compacted: 199 more lines, ~700 tokens elided)                                                                                           "
"00:00 zoid found a handful of TODOs.                                                                                                        "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
