crates/zoid-tui/tests/snapshots/chat_snapshot__compacted_tool_result_normal_140.snap
---
source: crates/zoid-tui/tests/chat_snapshot.rs
expression: "draw_zoom(&compacted_msgs(), Zoom::Normal, 140)"
---
"00:00 › grep the repo for TODOs                                                                                                             "
"                                                                                                                                            "
"00:00 zoid searching                                                                                                                        "
"  ● search(query: TODO)                                                                                                                     "
"  ✓ ⊟ compacted search → row 0                                                                                                              "
"                                                                                                                                            "
"00:00 zoid found a handful of TODOs.                                                                                                        "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
