crates/zoid-tui/tests/snapshots/chat_snapshot__empty_chat_frame.snap
---
source: crates/zoid-tui/tests/chat_snapshot.rs
assertion_line: 9
expression: terminal.backend().to_string()
---
" zoid CHAT ⎇ main                                           "
"  (no messages yet)                                         "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
" CHAT · ⇧Tab Build · q quit                                 "
