crates/zoid-tui/tests/snapshots/chat_snapshot__seeded_transcript_frame.snap
---
source: crates/zoid-tui/tests/chat_snapshot.rs
expression: "draw(&msgs, false)"
---
" zoid CHAT ⎇ main                                           "
"00:00 › what's causing the 500?                             "
"                                                            "
"00:00 zoid an unwrapped lookup in the handler.              "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"┌ message ─────────────────────────────────────────────────┐"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
" CHAT · ⇧Tab Build · ⏎ send · ^C quit                       "
