crates/zoid-tui/tests/snapshots/chat_snapshot__streaming_caret_frame.snap
---
source: crates/zoid-tui/tests/chat_snapshot.rs
assertion_line: 34
expression: "draw(&msgs, true)"
---
" zoid CHAT ⎇ main                                           "
"00:00 › hi                                                  "
"00:00 zoid thinking▌                                        "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"┌ message ─────────────────────────────────────────────────┐"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
" CHAT · ⇧Tab Build · ⏎ send · ^C quit                       "
