crates/zoid-tui/tests/snapshots/chat_snapshot__tool_call_and_result_frame.snap
---
source: crates/zoid-tui/tests/chat_snapshot.rs
expression: "draw(&msgs, false)"
---
" zoid CHAT ⎇ main                                           "
"00:00 › read a.txt                                          "
"                                                            "
"00:00 zoid reading it                                       "
"  ● read_file(path: a.txt)                                  "
"  ✓ read_file → file body                                   "
"                                                            "
"00:00 zoid it contains the config.                          "
"┌ message ─────────────────────────────────────────────────┐"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
" CHAT · ⇧Tab Build · ⏎ send · ^Q quit                       "
