crates/zoid-tui/tests/snapshots/chat_snapshot__tool_error_result_frame.snap
---
source: crates/zoid-tui/tests/chat_snapshot.rs
expression: "draw(&msgs, false)"
---
" zoid CHAT ⎇ main                                           "
"00:00 › run the build                                       "
"  ● shell(command: false) ⏎ peek                            "
"  ⚠ shell → boom                                            "
"                                                            "
"00:00 zoid the command failed.                              "
"                                                            "
"                                                            "
"┌ message ─────────────────────────────────────────────────┐"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
" CHAT · ⇧Tab Build · ⏎ send · ^C quit                       "
